--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,12 @@
     "rules": {
       "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
       "react/react-in-jsx-scope": "off",
+      "import/no-extraneous-dependencies": [
+        "error",
+        {
+          "devDependencies": true
+        }
+      ],
       "import/no-unresolved": "off",
       "no-shadow": "off"
     },
